daemon/actions/bundled/brightnesscontrol.h
@@ -70,7 +70,6 @@ private:
     int brightnessPercent(float value) const;
 
     int m_defaultValue = -1;
-    QString m_lastProfile;
     QString m_currentProfile;
 };
 
