daemon/actions/bundled/keyboardbrightnesscontrol.h
@@ -72,7 +72,6 @@ private:
 
     int m_defaultValue = -1;
     int m_lastKeyboardBrightness = -1;
-    QString m_lastProfile;
     QString m_currentProfile;
 };
 
